<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".fragments.AddExpenseFragment"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textColor="#F1F1F1"
                android:textStyle="bold"
                android:textSize="18sp"/>

<!--            <Spinner-->
<!--                android:id="@+id/typeSpinner"-->
<!--                tools:targetApi="p" />-->
            <Spinner
                android:id="@+id/addTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineProvider="background"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/expenseAmountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_amount"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/expenseDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_date"
            android:imeOptions="actionNext"
            android:padding="5dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/datePickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="3dp"
            android:clickable="true"
            android:src="@drawable/ic_date"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/expenseTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_time"
            android:imeOptions="actionDone"
            android:padding="5dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/timePickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="3dp"
            android:clickable="true"
            android:src="@drawable/ic_access_time_black_24dp" />

    </FrameLayout>





    <LinearLayout
        android:id="@+id/cameraGalleryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="9">

        <LinearLayout
            android:id="@+id/cameraBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cameraID"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/galleryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/galleryID"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cancelID"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_cancel_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/addDocumentBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FF5722"
            android:textStyle="bold"
            android:text=""
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="14sp"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addExpenseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#3EB531"
            android:textStyle="bold"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelExpenseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:background="#45A8F6"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>